# navigator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  0_0.pcd  300s_deviation_2.csv  300s_deviation_3_aggressive.csv  300s_deviation_4_aggressive.csv  300s_deviation_5_aggressive.csv  300s_deviation_6_aggressive.csv  300s_deviation_7_aggressive_detailed.csv  300s_deviation_report.csv  CHANGELOG.rst  COMMANDS.md  Dockerfile  LICENSE  README.md  Route.csv  a.txt  atlas.launch.py  bag.bash  biases.csv  carla.launch.py  converted_gps.csv  costmap3.npy  curbs.ipynb  delete_history.sh  deviation_k10.csv  deviation_report_04_11_2022_00_45_26  deviation_report_04_11_2022_00_48_17.csv  deviation_report_04_11_2022_00_55_12.csv  deviation_report_04_11_2022_01_17_45.csv  deviation_report_04_11_2022_01_18_05.csv  deviation_report_04_11_2022_01_18_54.csv  deviation_report_04_11_2022_01_21_38.csv  deviation_report_04_11_2022_01_33_27.csv  deviation_report_04_11_2022_01_41_20.csv  deviation_report_04_11_2022_01_48_05.csv  deviation_report_04_11_2022_02_11_13.csv  deviation_report_04_11_2022_02_14_15.csv  (+83 more)
base/: Dockerfile  (+1 more)
localization_cc/: CMakeLists.txt  package.xml
localization_cc/exe/: localization_node.cpp
localization_cc/include/localization/: GlobalMap.hpp  LocalizationNode.hpp  Utils.hpp  Visualizer.hpp
localization_cc/src/: GlobalMap.cpp  LocalizationNode.cpp  Utils.cpp  Visualizer.cpp
nodes/interface/can_interface/: CMakeLists.txt  package.xml
nodes/interface/can_interface/include/can_interface/: CanBus.hpp  CanBusDecorator.hpp  CanFrame.hpp  CanInterfaceNode.hpp  ConcreteCanBus.hpp  can_exceptions.hpp
nodes/interface/can_interface/launch/: container.launch.py
nodes/interface/can_interface/src/: CanBusDecorator.cpp  CanFrame.cpp  CanInterfaceNode.cpp  ConcreteCanBus.cpp  interface.cpp
nodes/interface/can_interface/test/: test_can_bus.cpp  test_can_frame.cpp  test_can_interface_node.cpp
nodes/interface/epas_translator/: .gitignore  CMakeLists.txt  package.xml
nodes/interface/epas_translator/include/epas_translator/: ControllerNode.hpp
nodes/interface/epas_translator/include/voltron_epas_steering/: ControllerNode.hpp  ReporterNode.hpp
nodes/interface/epas_translator/launch/: container.launch.py
nodes/interface/epas_translator/src/: ControllerNode.cpp  ReporterNode.cpp  controller.cpp  reporter.cpp
nodes/interface/epas_translator/test/: test_controller.cpp  test_reporter.cpp
nodes/interface/pid_controller/: CMakeLists.txt  package.xml
nodes/interface/pid_controller/include/pid_controller/: PidControllerNode.hpp
nodes/interface/pid_controller/include/voltron_steering_pid/: PidController.hpp  PidControllerNode.hpp
nodes/interface/pid_controller/launch/: container.launch.py
nodes/interface/pid_controller/src/: PidController.cpp  PidControllerNode.cpp  pid_controller.cpp
src/atlas/curb_localizer/: CMakeLists.txt  package.xml
src/atlas/curb_localizer/exe/: curb_localizer_exe.cpp
src/atlas/curb_localizer/include/curb_localizer/: CurbLocalizerNode.hpp
src/atlas/curb_localizer/src/: CurbLocalizerNode.cpp  curb_localizer_exe.cpp  curb_localizer_node.cpp
src/atlas/floam/: CMakeLists.txt  package.xml
src/atlas/floam/exe/: laser_processing_node.cpp  odom_estimation_node.cpp
src/atlas/floam/include/floam/: LaserProcessingNode.hpp  (+2 more)
src/atlas/floam/src/: LaserProcessingNode.cpp  OdomEstimationNode.cpp  laserProcessingClass.cpp  lidar.cpp  lidarOptimization.cpp  odomEstimationClass.cpp
src/atlas/icp_nudger/: package.xml
src/atlas/icp_nudger/src/: ICPNudger.cpp
src/atlas/landmark_localizer/: package.xml  setup.cfg  setup.py
src/atlas/landmark_localizer/landmark_localizer/: landmark_localizer_node.py
src/atlas/lidar_nudger/: package.xml
src/atlas/lidar_nudger/exe/: nudger.cpp
src/atlas/lidar_nudger/src/: LidarNudgerNode.cpp
src/atlas/optimization/: CMakeLists.txt  package.xml
src/atlas/optimization/exe/: optimizer.cpp
src/atlas/optimization/src/: OptimizationNode.cpp
src/atlas/vehicle_kinematics/: package.xml
src/atlas/vehicle_kinematics/exe/: vehicle_kinematics.cpp
src/atlas/vehicle_kinematics/src/: VehicleKinematicsNode.cpp
src/bridging/: CMakeLists.txt  README.MD  package.xml
src/bridging/bridge/: CMakeLists.txt  package.xml
src/bridging/bridge/src/: bridging.cpp
src/bridging/bridge_manager/: CMakeLists.txt  package.xml
src/bridging/bridge_manager/launch/: container.launch.py
src/bridging/bridge_manager/src/: BridgeManagerNode.cpp  bridge_manager.cpp
src/bridging/bridge_manager/test/: test_bridge_manager.cpp
src/bridging/include/: HTTPRequest.hpp
src/bridging/src/: bridging_creation.cpp
src/common/libboost/: CMakeLists.txt  package.xml
src/common/libopendrive/: CMakeLists.txt  package.xml
src/common/libopendrive/libOpenDRIVE/: CMakeLists.txt  Lanes.cpp  Lanes.h  Math.hpp  OpenDriveMap.cpp  OpenDriveMap.h  RefLine.cpp  RefLine.h  Utils.hpp
src/common/opendrive_utils/: CMakeLists.txt  package.xml
src/common/opendrive_utils/exe/: main.cpp
src/common/opendrive_utils/src/: GeometricMap.cpp  LaneGraph.cpp  OpenDriveUtils.cpp
src/common/opendrive_utils/test/: test_OpenDriveUtils.cpp
src/control/airbags/: package.xml
src/control/airbags/airbags/: airbag_node.py
src/control/controller/: package.xml  setup.cfg  setup.py
src/control/controller/controller/: controller_node.py
src/lidar_SLAM/: package.xml  setup.cfg  setup.py
src/lidar_SLAM/lidar_SLAM/: localization_node.py  mapping_node.py
src/lidar_SLAM/resource/: combined_map.pcd  kiss_slam.yaml
src/localization/: CMakeLists.txt  imu_transformer_exe.cpp  package.xml
src/localization/hubble/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/localization/hubble/hubble/: estimator.py
src/localization/hubble/src/: hubble_exe.cpp
src/localization/ndt_nodes/: CMakeLists.txt
src/localization/ndt_nodes/src/: map_publisher.cpp
yolov8_brake_detection/: package.xml  setup.cfg
yolov8_brake_detection/yolov8_brake_detection/: yolov8_node.py
yolov8_brake_detection/yolov8_brake_detection/rosbag2_2024_12_11-00_42_05/: metadata.yaml
(+3315 files in other folders)
