<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_cc</name>
  <version>0.0.1</version>
  <description>Localization using MapClosures and NDT Matching</description>
  <maintainer email="swe@gekevin.com">Kevin Ge</maintainer>
  <license>MIT</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>
  <depend>rclcpp</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libabsl-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
