<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>imu_transformer</name>
    <version>1.0.0</version>
    <description>New localization using IMU</description>
    <maintainer email="kzz20000@utdallas.edu">Kyle</maintainer>
    <license>Apache 2.0</license>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>turtlesim</depend>
    <depend>rclcpp</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>voltron_test_utils</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
