<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid_controller</name>
  <version>0.0.0</version>
  <description>PID controller for steering</description>
  <maintainer email="joshmackwilliams@protonmail.com">Joshua Williams</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>voltron_test_utils</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
