<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curb_localizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="egan.johnson@utdallas.edu">Egan Johnson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opendrive_utils</depend>
  <depend>PCL</depend>
  <depend>lz4</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
