<?xml version="1.0"?>
<package format="3">
  <name>floam</name>
  <version>0.0.0</version>

  <description>
    This work is created based on some optimization on ALOAM by HKUST and LOAM by CMU
  </description>

  <maintainer email="wh200720041@gmail.com">Han Wang</maintainer>

  <license>BSD</license>
  <url>https://wanghan.pro</url>
  <author email="wh200720041@gmail.com">Han Wang</author>
  
  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
  <depend>Eigen3</depend>
  <depend>eigen_conversions</depend>

  <depend>pcl_conversions</depend>

  <export>
  </export>
</package>
