<?xml version="1.0"?>
<package format="3">
  <name>floam</name>
  <version>0.0.0</version>

  <description>
    This work is created based on some optimization on ALOAM by HKUST and LOAM by CMU
  </description>

  <maintainer email="wh200720041@gmail.com">Han Wang</maintainer>

  <license>BSD</license>
  <url>https://wanghan.pro</url>
  <author email="wh200720041@gmail.com">Han Wang</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Ceres</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
