<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icp_nudger</name>
  <version>0.0.0</version>
  <description>Node to correct GPS estimate using ICP on Lidar stream</description>
  <maintainer email="will.heitman@utdallas.edu">Will Heitman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>


  <test_depend>ament_lint_auto</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
