<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_nudger</name>
  <version>0.0.1</version>
  <description>Package to form a state estimate using lidar semantic segmentation and an HD map</description>
  <maintainer email="will.heitman@utdallas.edu">Will Heitman</maintainer>
  <license>MIT</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>libopendrive</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
