<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_kinematics</name>
  <version>0.0.0</version>
  <description>Convert steering angle and speed into twist</description>
  <maintainer email="joshmackwilliams@protonmail.com">Joshua Williams</maintainer>
  <license>MIT License</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
