<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge</name>
  <version>1.0.0</version>
  <description>Bridge between navigator and Nova front-end interface</description>
  <maintainer email="raghavpillai101@gmail.com">rpillai</maintainer>
  <license>MIT License</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
