<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_manager</name>
  <version>1.0.0</version>
  <description>Bridge manager node for Nova</description>
  <maintainer email="raghavpillai101@gmail.com">Raghav Pillai</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>voltron_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>voltron_test_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
