<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_manager</name>
  <version>1.0.0</version>
  <description>Bridge manager node for Nova</description>
  <maintainer email="raghavpillai101@gmail.com">Raghav Pillai</maintainer>
  <license>MIT License</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>voltron_msgs</depend>
  <depend>std_msgs</depend>
  
  <test_depend>voltron_test_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
