<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opendrive_utils</name>
  <version>0.0.0</version>
  <description>Various utilities for using OpenDrive maps</description>
  <maintainer email="joshmackwilliams@protonmail.com">Joshua Williams</maintainer>
  <license>MIT License</license>

  <buildtool_depend>nova_auto_package</buildtool_depend>

  <depend>libopendrive</depend>
  <depend>libboost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
