<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller</name>
  <version>0.1.0</version>
  <description>Unified controller. Trajectory -> TBS</description>
  <maintainer email="Daniel.Vayman@utdallas.edu">dvayman</maintainer>
  <license>MIT</license>

  <depend>navigator_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
